add/klientas-changes

--- a/Autonuoma/Views/Klientas/Delete.cshtml
+++ b/Autonuoma/Views/Klientas/Delete.cshtml
@@ -26,8 +26,6 @@
 		<legend class="confirm-msg">Ar tikrai norite šalinti šį klientą?</legend>
 
 		<dl>
-			<dt>@Html.DisplayNameFor(m => m.AsmensKodas)</dt>
-			<dd>@Html.DisplayFor(m => m.AsmensKodas)</dd>
 
 			<dt>@Html.DisplayNameFor(m => m.Vardas)</dt>
 			<dd>@Html.DisplayFor(m => m.Vardas)</dd>
@@ -37,9 +35,6 @@
 
 			<dt>@Html.DisplayNameFor(m => m.GimimoData)</dt>
 			<dd>@Html.DisplayFor(m => m.GimimoData)</dd>
-
-			<dt>@Html.DisplayNameFor(m => m.Telefonas)</dt>
-			<dd>@Html.DisplayFor(m => m.Telefonas)</dd>
 
 			<dt>@Html.DisplayNameFor(m => m.Epastas)</dt>
 			<dd>@Html.DisplayFor(m => m.Epastas)</dd>
@@ -56,7 +51,7 @@
 		{
 			<div class="buttons">
 				<button
-					formaction="@Url.Action("DeleteConfirm", new {id = Model.AsmensKodas})"
+					formaction="@Url.Action("DeleteConfirm", new {id = Model.Id})"
 					class="btn btn-danger"
 					style="white-space: nowrap;"
 				><i class="fa-solid fa-trash"></i> Šalinti</button>
