--- a/autodetales/Views/Reports/Contracts.cshtml
+++ b/autodetales/Views/Reports/Contracts.cshtml
@@ -1,109 +1,129 @@
 ﻿@model Org.Ktu.Isk.P175B602.Autonuoma.Models.ContractsReport.Report
 
 @* this will also be used as page title in main layout *@
-@{ ViewData["title"] = "Sutarčių ataskaita"; }
+@{
+    ViewData["title"] = "Turimų dalių ataskaita";
+}
 
 @* content header *@
 <div class="main-content-header">
-	<span class="title">@ViewData["title"]</span>
+    <span class="title">@ViewData["title"]</span>
 </div>
 
 @* content itself *@
 <div class="main-content-rep">
-@using( Html.BeginForm(FormMethod.Get, new { @class="rep" }) )
-{
-	<p><strong>Parengta:</strong> @String.Format("{0:yyyy-MM-dd HH:mm}", DateTime.Now)</p>
+    @using (Html.BeginForm(FormMethod.Get, new { @class = "rep" }))
+    {
+        <p><strong>Parengta:</strong> @String.Format("{0:yyyy-MM-dd HH:mm}", DateTime.Now)</p>
 
-	@* filter section *@
-	<div class="filter">
-		<div class="fields">
-			<div class="field">
-				<label>Sutartys nuo:</label>
-				@Html.TextBoxFor(m => m.DateFrom, "{0:yyyy-MM-dd}", new { @class = "date-picker" })
-			</div>
+        @* filter section *@
+        <div class="filter">
+            <div class="fields">
+                <div class="field">
+                    <label>Dalys gautos nuo:</label>
+                    @Html.TextBoxFor(m => m.DateFrom, "{0:yyyy-MM-dd}", new { @class = "date-picker" })
+                </div>
 
-			<div class="field">
-				<label>Sutartys iki:</label>
-				@Html.TextBoxFor(m => m.DateTo, "{0:yyyy-MM-dd}", new { @class = "date-picker" })
-			</div>
-		</div>
+                <div class="field">
+                    <label>Dalys gautos iki:</label>
+                    @Html.TextBoxFor(m => m.DateTo, "{0:yyyy-MM-dd}", new { @class = "date-picker" })
+                </div>
+            </div>
 
-		<div class="buttons">
-			<button class="btn btn-success"><i class="fa-solid fa-filter"></i> Atrinkti</button>
-		</div>
-	</div>
+            <div class="buttons">
+                <button class="btn btn-success"><i class="fa-solid fa-filter"></i> Atrinkti</button>
+            </div>
+        </div>
 
-	@* report data *@
-	<table class="report">
-		<thead>
-			<tr>
-				<th>@Html.DisplayNameFor(m => m.Sutartys[0].Nr)</th>
-				<th>@Html.DisplayNameFor(m => m.Sutartys[0].SutartiesData)</th>
-				<th>@Html.DisplayNameFor(m => m.Sutartys[0].Kaina)</th>
-				<th>@Html.DisplayNameFor(m => m.Sutartys[0].PaslauguKaina)</th>
-			</tr>
-		</thead>
-		<tbody>
-			@if( Model.Sutartys.Count == 0 )
-			{
-				@* no data message *@
-				<tr class="no-data-msg">
-					<td colspan="4" align="center">Nurodytame laikotarpyje nebuvo sudaryta sutarčių</td>
-				</tr>
-			}
-			else 
-			{
-				@* groups *@
-				@for( int i = 0; i < Model.Sutartys.Count; i++ )
-				{
-					@* group header *@
-					if( i == 0 || Model.Sutartys[i].AsmensKodas != Model.Sutartys[i-1].AsmensKodas )
-					{
-						<tr class="group-header">
-							<td 
-								colspan="4" 
-								align="center"
-							>
-								<b>@Html.DisplayFor(m => Model.Sutartys[i].Vardas) @Html.DisplayFor(m => Model.Sutartys[i].Pavarde)</b>
-							</td>
-						</tr>
-					}
+        @* report data *@
+        <table class="report">
+            <thead>
+                <tr>
+                    @*              <th>@Html.DisplayNameFor(m => m.Sutartys[0].Nr)</th>
+                <th>@Html.DisplayNameFor(m => m.Sutartys[0].SutartiesData)</th>
+                <th>@Html.DisplayNameFor(m => m.Sutartys[0].Kaina)</th>
+                <th>@Html.DisplayNameFor(m => m.Sutartys[0].PaslauguKaina)</th>*@
+                    <th>@Html.DisplayNameFor(m => m.Sutartys[0].Data)</th>
+                    <th>@Html.DisplayNameFor(m => m.Sutartys[0].Dalis)</th>
+                    <th>@Html.DisplayNameFor(m => m.Sutartys[0].DaliesSritis)</th>
+                    <th>@Html.DisplayNameFor(m => m.Sutartys[0].VariklioTuris)</th>
+                    <th>@Html.DisplayNameFor(m => m.Sutartys[0].Galia)</th>
+                    <th>@Html.DisplayNameFor(m => m.Sutartys[0].KuroTipas)</th>
+                    <th>@Html.DisplayNameFor(m => m.Sutartys[0].PadaliniuSkaicius)</th>
+                    @*public string Dalis { get; set; }
+                public string DaliesSritis { get; set; }
+                public int VariklioTuris { get; set; }
+                public int Galia { get; set; }
+                public string KuroTipas { get; set; }
+                public int DalysSkaicius { get; set; }*@
+                </tr>
+            </thead>
+            <tbody>
+                @if (Model.Sutartys.Count == 0)
+                {
+                    @* no data message *@
+                    <tr class="no-data-msg">
+                        <td colspan="8" align="center">Nurodytame laikotarpyje nebuvo sudaryta sutarčių</td>
+                    </tr>
+                }
+                else
+                {
+                    @* groups *@
+                    @for (int i = 0; i < Model.Sutartys.Count; i++)
+                    {
+                        @* group header *@
+                        if (i == 0 || Model.Sutartys[i].Padalinys != Model.Sutartys[i - 1].Padalinys)
+                        {
+                            <tr class="group-header">
+                                <td colspan="7"
+                                    align="center">
+                                    <b>@Html.DisplayFor(m => Model.Sutartys[i].Padalinys) @Html.Label("id") @Html.DisplayFor(m => Model.Sutartys[i].PadaliniuSkaicius)</b>
+                                </td>
+                            </tr>
+                        }
 
-					@* group content *@
-					<tr>
-						<td>#@Html.DisplayFor(m => Model.Sutartys[i].Nr)</td>
-						<td>@Html.DisplayFor(m => Model.Sutartys[i].SutartiesData)</td>
-						<td>@Html.DisplayFor(m => Model.Sutartys[i].Kaina)</td>
-						<td>@Html.DisplayFor(m => Model.Sutartys[i].PaslauguKaina)</td>
-					</tr>
+                        @* group content *@
+                        <tr>
+                            @*<td>#@Html.DisplayFor(m => Model.Sutartys[i].Nr)</td>
+                <td>@Html.DisplayFor(m => Model.Sutartys[i].SutartiesData)</td>
+                <td>@Html.DisplayFor(m => Model.Sutartys[i].Kaina)</td>
+                <td>@Html.DisplayFor(m => Model.Sutartys[i].PaslauguKaina)</td>*@
+                            <td>@Html.DisplayFor(m => m.Sutartys[i].Data)</td>
+                            <td>@Html.DisplayFor(m => m.Sutartys[i].Dalis)</td>
+                            <td>@Html.DisplayFor(m => m.Sutartys[i].DaliesSritis)</td>
+                            <td>@Html.DisplayFor(m => m.Sutartys[i].VariklioTuris)</td>
+                            <td>@Html.DisplayFor(m => m.Sutartys[i].Galia)</td>
+                            <td>@Html.DisplayFor(m => m.Sutartys[i].KuroTipas)</td>
+                            <td>@Html.DisplayFor(m => m.Sutartys[i].PadaliniuSkaicius)</td>
+                        </tr>
 
-					@* group total *@
-					if( i == Model.Sutartys.Count-1 || Model.Sutartys[i].AsmensKodas != Model.Sutartys[i + 1].AsmensKodas )
-					{
-						<tr>
-							<td colspan="2"></td>
-							<td><b>@Html.DisplayFor(m => Model.Sutartys[i].BendraSuma)</b></td>
-							<td><b>@Html.DisplayFor(m => Model.Sutartys[i].BendraSumaPaslaug)</b></td>
-						</tr>
-					}
-				}
+                        @* group total *@
+                        if (i == Model.Sutartys.Count - 1 || Model.Sutartys[i].ModelioPavadinimas != Model.Sutartys[i + 1].ModelioPavadinimas)
+                        {
+                            <tr>
+                                <td colspan="6"></td>
+                                <td><b> @Html.Label("Modelio specifikacija: ") @Html.DisplayFor(m => Model.Sutartys[i].ModelioPavadinimas)</b></td>
+                                @*<td><b>@Html.DisplayFor(m => Model.Sutartys[i].PadaliniuSkaicius)</b></td>*@
+                            </tr>
+                        }
+                    }
 
-				@* grand total *@
-				<tr class="grand-total-header">
-					<td colspan="4" align="center"><b>Viso</b></td>
-				</tr>
+                    @* grand total *@
+                    <tr class="grand-total-header">
+                        <td colspan="12" align="center"><b>Viso</b></td>
+                    </tr>
 
-				<tr>
-					<td colspan="2"></td>
-					<td>
-						@Html.DisplayFor(m => Model.VisoSumaSutartciu)
-					</td>
-					<td>
-						@Html.DisplayFor(m => Model.VisoSumaPaslaugu)
-					</td>
-				</tr>
-			}
-		</tbody>
-	</table>
-}
+                    <tr>
+                        <td colspan="5"></td>
+                        <td>
+                            @Html.DisplayFor(m => Model.VisoSumaSutartciu)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(m => Model.VisoSumaPaslaugu)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
 </div>
