--- a/autodetales/Views/_Layout.cshtml
+++ b/autodetales/Views/_Layout.cshtml
@@ -65,6 +65,35 @@
                                 <a href="@Url.Action("Index", "DalysF2")" class="@MarkActive("DalysF2") nav-link">Dalys F2</a>
                             </li>
                         </ul>
+
+                        @* drop-down menu for report links *@
+                        <ul class="navbar-nav justify-content-right mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="@MarkActive("Report") nav-link dropdown-toggle"
+                                   href="#"
+                                   id="navbarReports"
+                                   role="button"
+                                   data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    Ataskaitos
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarReports">
+                                    @* report links go here *@
+                                    <li>
+                                        <a href="@Url.Action("Services", "Reports")"
+                                           class="@MarkActive("Reports", "Services") dropdown-item">Paslaugų ataskaita</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("Contracts", "Reports")"
+                                           class="@MarkActive("Reports", "Contracts") dropdown-item">Sutarčių ataskaita</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("LateContracts", "Reports")"
+                                           class="@MarkActive("Reports", "LateContracts") dropdown-item">Vėluojančių sutarčių ataskaita</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -124,7 +153,7 @@
             $(".date-picker").datetimepicker({ timepicker: false, format: 'Y-m-d' });
             $(".datetime-picker").datetimepicker({ format: 'Y-m-d h:i' });
         });
-                                                    //]]>
+                                                                                            //]]>
     </script>
 </body>
 </html>
